--- a/prac1_jdbc/src/main/resources/application.properties
+++ b/prac1_jdbc/src/main/resources/application.properties
@@ -1,1 +1,5 @@
 spring.application.name=prac1_jdbc
+
+spring.datasource.url= jdbc:h2:tcp://localhost/~/test
+spring.datasource.username= sa
+spring.datasource.password=
