--- a/prac4_db_application/src/main/resources/application.yml
+++ b/prac4_db_application/src/main/resources/application.yml
@@ -1,7 +1,12 @@
 spring:
   profiles:
     active: local
+  datasource:
+    url: jdbc:h2:tcp://localhost/~/test
+    username: sa
+    password:
 
 
 server:
   port: 8090
+
