--- a/prac4_db_application/src/main/resources/application.yml
+++ b/prac4_db_application/src/main/resources/application.yml
@@ -10,3 +10,7 @@ spring:
 server:
   port: 8090
 
+mybatis:
+  type-aliases-package: com.example.prac4_db_application.domain
+  configuration:
+    map-underscore-to-camel-case: true
