--- a/prac4_db_application/src/test/resources/application.yml
+++ b/prac4_db_application/src/test/resources/application.yml
@@ -1,3 +1,12 @@
 spring:
   profiles:
     active: test
+
+mybatis:
+  type-aliases-package: com.example.prac4_db_application.domain
+  configuration:
+    map-underscore-to-camel-case: true
+
+logging:
+  level:
+    .com.example.prac4_db_application.repository.mybatis: trace
