:books: Kotlin - jpa 1. 설정 - kotlin(plugin.jpa) - no-arg plugin 을 포함하는 최적화 플러그인 - allOpen → JPA 는 Entity 클래스가 open 이어야 함. kotlin 은 기본적으로 클래스, 메서드, 프로퍼티가 final 이다.

--- a/prac4_db_application/src/test/resources/application.yml
+++ b/prac4_db_application/src/test/resources/application.yml
@@ -10,3 +10,7 @@ mybatis:
 logging:
   level:
     .com.example.prac4_db_application.repository.mybatis: trace
+
+logging.level.org.hibernate :
+  SQL : DEBUG
+
